# covid-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
