[package]
name = "covid-cli"
version = "0.1.0"
authors = ["Abhijat Malviya <abhijat@ridecell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"
structopt = "0.3.12"
